compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@function_boolean.snap
---
source: compiler/lume_parser/src/tests.rs
expression: "parse_expr(\"let _ = call?();\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Call(
                Call {
                    callee: None,
                    name: Path {
                        root: [],
                        name: Callable {
                            name: Identifier {
                                name: "call?",
                                location: Location(
                                    8..13,
                                ),
                            },
                            type_arguments: [],
                            location: Location(
                                8..14,
                            ),
                        },
                        location: Location(
                            8..14,
                        ),
                    },
                    arguments: [],
                    location: Location(
                        8..16,
                    ),
                },
            ),
            location: Location(
                0..16,
            ),
        },
    ),
]
