compiler/lume_parser/src/snapshots/lume_parser__tests__call_snapshots@method_param_1.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = a.call(a);\")"
---
SOURCE_FILE@0..18
  LET_STMT@0..18
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    INSTANCE_CALL_EXPR@7..17
      VARIABLE_EXPR@7..9
        WHITESPACE@7..8 " "
        NAME@8..9
          IDENT@8..9 "a"
      DOT@9..10 "."
      NAME@10..14
        IDENT@10..14 "call"
      ARG_LIST@14..17
        LEFT_PAREN@14..15 "("
        VARIABLE_EXPR@15..16
          NAME@15..16
            IDENT@15..16 "a"
        RIGHT_PAREN@16..17 ")"
    SEMICOLON@17..18 ";"
