compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@equality_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if a == 1 { }\")"
---
SOURCE_FILE@0..13
  EXPR_STMT@0..13
    IF_EXPR@0..13
      CONDITION@0..13
        IF_KW@0..2 "if"
        BIN_EXPR@2..9
          VARIABLE_EXPR@2..4
            WHITESPACE@2..3 " "
            NAME@3..4
              IDENT@3..4 "a"
          WHITESPACE@4..5 " "
          EQUAL@5..7 "=="
          WHITESPACE@7..8 " "
          LIT_EXPR@8..9
            INTEGER_LIT@8..9
              INTEGER_LIT@8..9 "1"
        WHITESPACE@9..10 " "
        BLOCK@10..13
          LEFT_BRACE@10..11 "{"
          WHITESPACE@11..12 " "
          RIGHT_BRACE@12..13 "}"
