compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@if_else_if_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if true { } else if false { }\")"
---
SOURCE_FILE@0..29
  EXPR_STMT@0..29
    IF_EXPR@0..29
      CONDITION@0..11
        IF_KW@0..2 "if"
        WHITESPACE@2..3 " "
        LIT_EXPR@3..7
          BOOLEAN_LIT@3..7
            BOOLEAN_LIT@3..7 "true"
        WHITESPACE@7..8 " "
        BLOCK@8..11
          LEFT_BRACE@8..9 "{"
          WHITESPACE@9..10 " "
          RIGHT_BRACE@10..11 "}"
      WHITESPACE@11..12 " "
      CONDITION@12..29
        ELSE_KW@12..16 "else"
        WHITESPACE@16..17 " "
        IF_KW@17..19 "if"
        WHITESPACE@19..20 " "
        LIT_EXPR@20..25
          BOOLEAN_LIT@20..25
            BOOLEAN_LIT@20..25 "false"
        WHITESPACE@25..26 " "
        BLOCK@26..29
          LEFT_BRACE@26..27 "{"
          WHITESPACE@27..28 " "
          RIGHT_BRACE@28..29 "}"
