compiler/lume_parser/src/snapshots/lume_parser__tests__conditional_snapshots@if_statement.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"if true { let a = 1; }\")"
---
SOURCE_FILE@0..22
  EXPR_STMT@0..22
    IF_EXPR@0..22
      CONDITION@0..22
        IF_KW@0..2 "if"
        WHITESPACE@2..3 " "
        LIT_EXPR@3..7
          BOOLEAN_LIT@3..7
            BOOLEAN_LIT@3..7 "true"
        WHITESPACE@7..8 " "
        BLOCK@8..22
          LEFT_BRACE@8..9 "{"
          WHITESPACE@9..10 " "
          LET_STMT@10..20
            LET_KW@10..13 "let"
            WHITESPACE@13..14 " "
            NAME@14..15
              IDENT@14..15 "a"
            WHITESPACE@15..16 " "
            ASSIGN@16..17 "="
            WHITESPACE@17..18 " "
            LIT_EXPR@18..19
              INTEGER_LIT@18..19
                INTEGER_LIT@18..19 "1"
            SEMICOLON@19..20 ";"
          WHITESPACE@20..21 " "
          RIGHT_BRACE@21..22 "}"
